--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -396,8 +396,8 @@ body {
 .scrolling-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  padding: 20px;
+  gap: 0;
+  padding: 0;
 }
 
 .scrolling-wrapper:hover {
